--- a/templates/questions_tag.html
+++ b/templates/questions_tag.html
@@ -10,9 +10,11 @@
 </div>
 
 
-{% for question in questions %}
+{% for question in page_obj %}
     {% include "inc/question_item.html" %}
 {% endfor %}
+
+{% include "inc/paginator.html" %}
 
 
 {% endblock %}
