--- a/templates/add_question.html
+++ b/templates/add_question.html
@@ -1,51 +1,71 @@
 {% extends "inc/base.html" %}
 
 {% block content %}
+{% load bootstrap5 %}
 
-<div class="row">
-    <div class="col-3">
-        <h2 class="mt-5">New question</h2>
+<div class="col-7 mt-5">
+
+    <div class="row">
+        <div class="col-6">
+            <h2 class="mt-5">New question</h2>
+        </div>
     </div>
+
+    <form action="/ask/?continue=" method="post" enctype="multipart/form-data">
+        {% csrf_token %}
+        {% bootstrap_form form %}
+        <div class="row my-4">
+            <div class="col-4">
+                <button class="settings-save-button">Submit</button>
+            </div>
+        </div>
+    </form>
 </div>
 
-<div class="row my-4">
-    <div class="col-2">
-        Title
-    </div>
-    <div class="col-9">
-        <input type="text" maxlength="50" class="question-field new-question-title">
-    </div>
-</div>
+<!--<div class="row">-->
+<!--    <div class="col-3">-->
+<!--        <h2 class="mt-5">New question</h2>-->
+<!--    </div>-->
+<!--</div>-->
+
+<!--<div class="row my-4">-->
+<!--    <div class="col-2">-->
+<!--        Title-->
+<!--    </div>-->
+<!--    <div class="col-9">-->
+<!--        <input type="text" maxlength="50" class="question-field new-question-title">-->
+<!--    </div>-->
+<!--</div>-->
 
 
-<div class="row my-2">
-    <div class="col-2">
-        Text
-    </div>
-    <div class="col-9">
-        <textarea maxlength="5000" class="question-field new-question-text" rows="10"></textarea>
-    </div>
-</div>
+<!--<div class="row my-2">-->
+<!--    <div class="col-2">-->
+<!--        Text-->
+<!--    </div>-->
+<!--    <div class="col-9">-->
+<!--        <textarea maxlength="5000" class="question-field new-question-text" rows="10"></textarea>-->
+<!--    </div>-->
+<!--</div>-->
 
 
-<div class="row my-2">
-    <div class="col-2">
-        Tags
-    </div>
-    <div class="col-9">
-        <input type="text" maxlength="50" class="question-field new-question-tags">
-    </div>
-</div>
+<!--<div class="row my-2">-->
+<!--    <div class="col-2">-->
+<!--        Tags-->
+<!--    </div>-->
+<!--    <div class="col-9">-->
+<!--        <input type="text" maxlength="50" class="question-field new-question-tags">-->
+<!--    </div>-->
+<!--</div>-->
 
 
-<div class="row my-3">
-    <div class="col-2">
+<!--<div class="row my-3">-->
+<!--    <div class="col-2">-->
 
-    </div>
-    <div class="col-9">
-        <button class="new-question-ask-button">Ask</button>
-    </div>
-</div>
+<!--    </div>-->
+<!--    <div class="col-9">-->
+<!--        <button class="new-question-ask-button">Ask</button>-->
+<!--    </div>-->
+<!--</div>-->
 
 
 {% endblock %}
