--- a/templates/login.html
+++ b/templates/login.html
@@ -3,29 +3,37 @@
 {% block content %}
 {% load bootstrap5 %}
 
+
 <div class="col-7 mt-5">
 
     <div class="row">
         <div class="col-3">
-            <h2 class="mt-5">Settings</h2>
+            <h2 class="mt-5">Log in</h2>
         </div>
     </div>
 
-    <form action="/settings/" method="post" enctype="multipart/form-data">
+    <form action="/login/?continue="{% url "hot" %}" method="post" enctype="multipart/form-data">
         {% csrf_token %}
         {% bootstrap_form form %}
-
         <div class="row my-4">
-             <div class="col-4 mr-5">
-                <img class="settings-avatar" src="{{ request.user.profile.avatar.url }}" alt="your avatar">
+            <div class="col-2">
+
             </div>
-            <div class="ml-5 col-4">
+            <div class="col-4">
                 <button class="settings-save-button">Submit</button>
             </div>
         </div>
-
     </form>
 
+
+    <div class="row my-4">
+        <div class="col-2">
+
+        </div>
+        <div class="col-4">
+            <a href="{% url "signup" %}">Create new account</a>
+        </div>
+    </div>
 
 
 </div>
